# ArcRun

./: LICENSE  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1711465146194-46cf40ab20192.mjs
src/: global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/routes/: index.tsx  layout.tsx  white.tsx
src/routes/new/: index.tsx  style.css
src/routes/settings/: index.tsx  layout.tsx  style.css
src/routes/settings/algorithm/: index.tsx
src/routes/settings/data/: index.tsx
src/routes/settings/main/: index.tsx
